--- a/index.html
+++ b/index.html
@@ -40,37 +40,27 @@
         <div class="dashed-line"></div>
 
     <!-- Menu -->
-        <div class="menu-options">
+    
+        <!-- Content menu -->
+        <section id="m3nu">
+            <label for="" class="menu-title font-color">menu</label>
+            <a class="font-color" id="menu-option" href="/video-work.html"><label for=""></label>vizualizrs</label></a>
+            <a class="font-color" id="menu-option" href="/images.html"><label for=""></label>images</label></a>
+        </section>
 
-            <!-- Content menu -->
-            <section id="m3nu">
-                <label for="" class="menu-title font-color">menu</label>
-                <a class="font-color" id="menu-option" href="/video-work.html"><label for=""></label>vizualizrs</label></a>
-                <a class="font-color" id="menu-option" href="/images.html"><label for=""></label>images</label></a>
-            </section>
+        <!-- <div class="dashed-line"></div> -->
 
-            <!-- Social menu -->
-            <section id="social-menu">
-                <a href="https://www.instagram.com/bebofrik/" target=”_blank”><img src="/assets/images/icons/instagram.png" alt=""></a>
-                <a href="https://www.youtube.com/channel/UC5oNJt-0mgmcMfv42GhqxZA" target=”_blank”><img src="/assets/images/icons/youtube.png" alt=""></a>
-                <a href="https://www.tiktok.com/@bebofrik" target=”_blank”><img src="/assets/images/icons/tiktok.png" alt=""></a>
-            </section>
-                <!-- <ul class="social-menu">
-                    <div class="nav-link">
-                        <li class="link font-color"><a class="link font-color" href="https://www.instagram.com/bebofrik/" target=”_blank”>instagram</a></li>
-                    </div>
-                    <div class="nav-link">
-                        <li class="link font-color"><a class="link font-color" href="https://www.youtube.com/channel/UC5oNJt-0mgmcMfv42GhqxZA" target=”_blank”>youtube</a></li>
-                    </div>
-                    <div class="nav-link">
-                        <li class="link font-color"><a class="link font-color" href="https://www.tiktok.com/@bebofrik" target=”_blank”>tiktok</a></li>
-                    </div>
-                </ul> -->
-        </div>
-
+        <!-- Game -->
         <!-- <div class="game-button">
             <button class="font-color" onclick="beginGame()" type="button"> Play a game </button>
         </div> -->
+
+        <!-- Social menu -->
+        <section id="social-menu">
+            <a href="https://www.instagram.com/bebofrik/" target=”_blank”><img src="/assets/images/icons/instagram.png" alt=""></a>
+            <a href="https://www.youtube.com/channel/UC5oNJt-0mgmcMfv42GhqxZA" target=”_blank”><img src="/assets/images/icons/youtube.png" alt=""></a>
+            <a href="https://www.tiktok.com/@bebofrik" target=”_blank”><img src="/assets/images/icons/tiktok.png" alt=""></a>
+        </section>
 
    </section>
 
