--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 
 
         <section class="about-me">
-            <h2 class="menu-title font-color">about fredo</h2>
-            <p class="font-color">He hails from the beautiful island of Puerto Rico. Currently based out of New York City, his focus is in digital/analog video manipulation, generative art, and web development.</p>
+            <h2 class="about-title font-color">about fredo</h2>
+            <p class="about-desc font-color">He hails from the beautiful island of Puerto Rico. Currently based out of New York City, his focus is in digital/analog video manipulation, generative art, and web development.</p>
         </section>
 
         <div class="dashed-line"></div>
