new menu layout

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cousine:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&display=swap" rel="stylesheet">
-    <title>FREDO IIMGGGS</title>
+    <title>FREDO VVIDEOO</title>
 </head>
 <body>
 <!-- Navigation section -->
@@ -45,14 +45,14 @@
         <label for="" class="menu-title font-color">menu</label>
         <div id="m3nu">
             <section class="menu-options">
-                <a class="font-color" id="menu-option" href="/about.html"><label for=""></label>about fredo</label></a>
+                <a class="font-color active" id="menu-option" href="/about.html"><label for=""></label>about fredo</label></a>
                 <a class="font-color" id="menu-option" href="/silent-vizs.html"><label for=""></label>silent magic <br> hour visualizrs</label></a>
                 <a class="font-color" id="menu-option" href="/vizs-music-pair.html"><label for=""></label>vizs/music pairings</label></a>
             </section>
             <section class="menu-options">
                 <a class="font-color" id="menu-option" href="/freelance.html"><label for=""></label>freelance work</label></a>
                 <a class="font-color" id="menu-option" href="/touchdesign.html"><label for=""></label>touchdesigner creations</label></a>
-                <a class="font-color active" id="menu-option" href="/images.html"><label for=""></label>images</label></a>
+                <a class="font-color" id="menu-option" href="/images.html"><label for=""></label>images</label></a>
             </section>
         </div>
 
@@ -72,23 +72,26 @@
 
    </section>
 
-<!-- Page Body -->
-   <section id="image-content">
-        <!-- <img src="/assets/images/scanned-img/me-1.jpeg" alt=""> -->
-        <img src="./assets/images/scanned-img/flower-1.jpg" alt="distorted pink flowers">
-        <img src="/assets/images/scanned-img/plant.jpeg" alt="">
-        <img src="./assets/images/scanned-img/cake.jpeg" alt="">
-        <img src="./assets/images/scanned-img/cottage-1.jpeg" alt="">
-        <img src="./assets/images/scanned-img/pond.jpeg" alt="">
-        <img src="./assets/images/scanned-img/ryan-2.jpg" alt="">
-        <img src="./assets/images/scanned-img/tree-1.jpg" alt="">
-        <img src="./assets/images/scanned-img/ryan-1.jpeg" alt="">
-        <img src="./assets/images/scanned-img/tree-2.jpg" alt="">
+    <!-- Page Body -->
+    <section id="content-top">
+        <!-- Mobile dash -->
+        <div class="content-dashed-line mobile-only"></div>
 
-        <div class="dashed-line"></div>
+        <!-- Page Content -->
+        <div id="about-me">
 
+            <!-- About -->
+            <section>
+                <h2 class="section-heading font-color">ABOUT FREDO</h2>
+                <p class="about-desc font-color">Wilfredo hails from the vibrant island of Puerto Rico. Currently based out of New York City, his focus is in digital/analog video manipulation, generative art, and web development.</p>
+
+                <section id="">
+                    <img class="img-width" src="/assets/images/scanned-img/me-1.jpeg" alt="">
+                </section>
+             </section>
+            
+            <div class="dashed-line"></div>
+        </div> 
     </section>
-
-
 </body>
 </html>
