--- a/index.html
+++ b/index.html
@@ -32,21 +32,29 @@
         <div class="dashed-line"></div>
 
 
-        <section class="about-me">
+        <!-- <section class="about-me">
             <h2 class="about-title font-color">about fredo</h2>
             <p class="about-desc font-color">He hails from the beautiful island of Puerto Rico. Currently based out of New York City, his focus is in digital/analog video manipulation, generative art, and web development.</p>
         </section>
 
-        <div class="dashed-line"></div>
+        <div class="dashed-line"></div> -->
 
     <!-- Menu -->
     
         <!-- Content menu -->
-        <section id="m3nu">
-            <label for="" class="menu-title font-color">menu</label>
-            <a class="font-color" id="menu-option" href="/video-work.html"><label for=""></label>vizualizrs</label></a>
-            <a class="font-color" id="menu-option" href="/images.html"><label for=""></label>images</label></a>
-        </section>
+        <label for="" class="menu-title font-color">menu</label>
+        <div id="m3nu">
+            <section class="menu-options">
+                <a class="font-color" id="menu-option" href="/about.html"><label for=""></label>about fredo</label></a>
+                <a class="font-color" id="menu-option" href="/silent-vizs.html"><label for=""></label>silent magic <br> hour visualizrs</label></a>
+                <a class="font-color" id="menu-option" href="/vizs-music-pair.html"><label for=""></label>vizs/music pairings</label></a>
+            </section>
+            <section class="menu-options">
+                <a class="font-color" id="menu-option" href="/freelance.html"><label for=""></label>freelance work</label></a>
+                <a class="font-color" id="menu-option" href="/touchdesign.html"><label for=""></label>touchdesigner creations</label></a>
+                <a class="font-color" id="menu-option" href="/images.html"><label for=""></label>images</label></a>
+            </section>
+        </div>
 
         <!-- <div class="dashed-line"></div> -->
 
