--- a/touchdesign.html
+++ b/touchdesign.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cousine:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&display=swap" rel="stylesheet">
-    <title>FREDO IIMGGGS</title>
+    <title>FREDO VVIDEOO</title>
 </head>
 <body>
 <!-- Navigation section -->
@@ -51,8 +51,8 @@
             </section>
             <section class="menu-options">
                 <a class="font-color" id="menu-option" href="/freelance.html"><label for=""></label>freelance work</label></a>
-                <a class="font-color" id="menu-option" href="/touchdesign.html"><label for=""></label>touchdesigner creations</label></a>
-                <a class="font-color active" id="menu-option" href="/images.html"><label for=""></label>images</label></a>
+                <a class="font-color active" id="menu-option" href="/touchdesign.html"><label for=""></label>touchdesigner creations</label></a>
+                <a class="font-color" id="menu-option" href="/images.html"><label for=""></label>images</label></a>
             </section>
         </div>
 
@@ -72,23 +72,40 @@
 
    </section>
 
-<!-- Page Body -->
-   <section id="image-content">
-        <!-- <img src="/assets/images/scanned-img/me-1.jpeg" alt=""> -->
-        <img src="./assets/images/scanned-img/flower-1.jpg" alt="distorted pink flowers">
-        <img src="/assets/images/scanned-img/plant.jpeg" alt="">
-        <img src="./assets/images/scanned-img/cake.jpeg" alt="">
-        <img src="./assets/images/scanned-img/cottage-1.jpeg" alt="">
-        <img src="./assets/images/scanned-img/pond.jpeg" alt="">
-        <img src="./assets/images/scanned-img/ryan-2.jpg" alt="">
-        <img src="./assets/images/scanned-img/tree-1.jpg" alt="">
-        <img src="./assets/images/scanned-img/ryan-1.jpeg" alt="">
-        <img src="./assets/images/scanned-img/tree-2.jpg" alt="">
+    <!-- Page Body -->
+    <section id="content-top">
+        <!-- Mobile dash -->
+        <div class="content-dashed-line mobile-only"></div>
 
-        <div class="dashed-line"></div>
+        <!-- Page Content -->
+        <div id="video-collection">
 
+            <!-- Touchdesign -->
+            <h2 class="section-heading font-color">TOUCHDESIGNER CREATIONS</h2>
+
+            <!-- Project 1 -->
+            <section id="td-collection">
+                <div class="td-projects">
+                    <img class="td-img" src="./assets/images/project-gifs/black-river.gif" alt="">
+                    <h3 class="font-color">dark river</h3>
+                </div>
+                <div class="td-projects">
+                    <img class="td-img" src="./assets/images/project-gifs/bloom.gif" alt="">
+                    <h3 class="font-color">bloom feedback</h3>
+                </div>
+                <div class="td-projects">
+                    <img class="td-img" src="./assets/images/project-gifs/clementines.gif" alt="">
+                    <h3 class="font-color">clementines</h3>
+                </div>
+                <div class="td-projects">
+                    <img class="td-img" src="./assets/images/project-gifs/liquor-n-vinyl.gif" alt="">
+                    <h3 class="font-color">vnyl</h3>
+                </div>
+            </section>
+
+            <div class="dashed-line"></div>
+
+        </div> 
     </section>
-
-
 </body>
 </html>
