--- a/silent-vizs.html
+++ b/silent-vizs.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cousine:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&display=swap" rel="stylesheet">
-    <title>FREDO IIMGGGS</title>
+    <title>FREDO VVIDEOO</title>
 </head>
 <body>
 <!-- Navigation section -->
@@ -46,13 +46,13 @@
         <div id="m3nu">
             <section class="menu-options">
                 <a class="font-color" id="menu-option" href="/about.html"><label for=""></label>about fredo</label></a>
-                <a class="font-color" id="menu-option" href="/silent-vizs.html"><label for=""></label>silent magic <br> hour visualizrs</label></a>
+                <a class="font-color active" id="menu-option" href="/silent-vizs.html"><label for=""></label>silent magic <br> hour visualizrs</label></a>
                 <a class="font-color" id="menu-option" href="/vizs-music-pair.html"><label for=""></label>vizs/music pairings</label></a>
             </section>
             <section class="menu-options">
                 <a class="font-color" id="menu-option" href="/freelance.html"><label for=""></label>freelance work</label></a>
                 <a class="font-color" id="menu-option" href="/touchdesign.html"><label for=""></label>touchdesigner creations</label></a>
-                <a class="font-color active" id="menu-option" href="/images.html"><label for=""></label>images</label></a>
+                <a class="font-color" id="menu-option" href="/images.html"><label for=""></label>images</label></a>
             </section>
         </div>
 
@@ -72,23 +72,61 @@
 
    </section>
 
-<!-- Page Body -->
-   <section id="image-content">
-        <!-- <img src="/assets/images/scanned-img/me-1.jpeg" alt=""> -->
-        <img src="./assets/images/scanned-img/flower-1.jpg" alt="distorted pink flowers">
-        <img src="/assets/images/scanned-img/plant.jpeg" alt="">
-        <img src="./assets/images/scanned-img/cake.jpeg" alt="">
-        <img src="./assets/images/scanned-img/cottage-1.jpeg" alt="">
-        <img src="./assets/images/scanned-img/pond.jpeg" alt="">
-        <img src="./assets/images/scanned-img/ryan-2.jpg" alt="">
-        <img src="./assets/images/scanned-img/tree-1.jpg" alt="">
-        <img src="./assets/images/scanned-img/ryan-1.jpeg" alt="">
-        <img src="./assets/images/scanned-img/tree-2.jpg" alt="">
+    <!-- Page Body -->
+    <section id="content-top">
+        <!-- Mobile dash -->
+        <div class="content-dashed-line mobile-only"></div>
 
-        <div class="dashed-line"></div>
+        <!-- Page Content -->
+        <div id="video-collection">
+
+            <!-- Silent Hour Projects Block -->
+            <section>
+                <h2 class="section-heading font-color">SILENT MAGIC HOUR SERIES</h2>
+                <h3 class="section-desc font-color">BYOM (bring your own music) eye candy party accessory</h3>
+            </section>
+
+            <!-- Project 1 -->
+            <section class="projects">
+                <div class="video-img">
+                    <img class="proj-img" src="./assets/images/wavy.jpeg" alt="">
+                </div>
+                <div class="title-container">
+                    <div class="title-runtime">
+                        <h4 class="proj-title">Wavy Silent Hour</h4>
+                        <p class="sub-desc font-color">1 hr. 2O23</p>
+                    </div>
+                    <a class="link tube-watch font-color" href="https://youtu.be/2FxIPGvL-Io" target=”_blank”>Watch on YOUTUBE</a>
+                    <br>
+                    <p class="font-color proj-desc">Dreamy geometry radiates warm tones as ocean waves texture the spinning squares.
+                    <br>
+                    <br>
+                       
+                    Created using TouchDesigner.</p>
+                </div>
+            </section>
+
+            <!-- Project 2 -->
+            <section class="projects">
+                <div class="video-img">
+                    <img class="proj-img" src="./assets/images/frosty.png" alt="">
+                </div>
+                <div class="title-container">
+                    <div class="title-runtime">
+                        <h4 class="proj-title">Frosty Silent Hour</h4>
+                        <p class="sub-desc font-color">1 hr. 2O23</p>
+                    </div>
+                    <a class="link tube-watch font-color" href="https://youtu.be/2FxIPGvL-Io" target=”_blank”>Watch on YOUTUBE</a>
+                    <br>
+                    <p class="font-color proj-desc">Pulsating thrusts of white and blues, noise and blob shapes slowly gravitate upwards, shifting size and place.
+                    <br>
+                    <br>   
+                    Created using TouchDesigner.</p>
+                </div>
+            </section>
+
+            <div class="dashed-line"></div>
 
     </section>
-
-
 </body>
 </html>
