--- a/vizs-music-pair.html
+++ b/vizs-music-pair.html
@@ -47,7 +47,7 @@
             <section class="menu-options">
                 <a class="font-color" id="menu-option" href="/about.html"><label for=""></label>about fredo</label></a>
                 <a class="font-color" id="menu-option" href="/silent-vizs.html"><label for=""></label>silent magic <br> hour visualizrs</label></a>
-                <a class="font-color" id="menu-option" href="/vizs-music-pair.html"><label for=""></label>vizs/music pairings</label></a>
+                <a class="font-color active" id="menu-option" href="/vizs-music-pair.html"><label for=""></label>vizs/music pairings</label></a>
             </section>
             <section class="menu-options">
                 <a class="font-color" id="menu-option" href="/freelance.html"><label for=""></label>freelance work</label></a>
@@ -138,98 +138,7 @@
 
             <div class="dashed-line"></div>
 
-            <!-- Silent Hour Projects Block -->
-            <section>
-                <h2 class="section-heading font-color">SILENT MAGIC HOUR SERIES</h2>
-                <h3 class="section-desc font-color">BYOM (bring your own music) eye candy party accessory</h3>
-            </section>
-
-            <!-- Project 1 -->
-            <section class="projects">
-                <div class="video-img">
-                    <img class="proj-img" src="./assets/images/wavy.jpeg" alt="">
-                </div>
-                <div class="title-container">
-                    <div class="title-runtime">
-                        <h4 class="proj-title">Wavy Silent Hour</h4>
-                        <p class="sub-desc font-color">1 hr. 2O23</p>
-                    </div>
-                    <a class="link tube-watch font-color" href="https://youtu.be/2FxIPGvL-Io" target=”_blank”>Watch on YOUTUBE</a>
-                    <br>
-                    <p class="font-color proj-desc">Dreamy geometry radiates warm tones as ocean waves texture the spinning squares.
-                    <br>
-                    <br>
-                       
-                    Created using TouchDesigner.</p>
-                </div>
-            </section>
-
-            <!-- Project 2 -->
-            <section class="projects">
-                <div class="video-img">
-                    <img class="proj-img" src="./assets/images/frosty.png" alt="">
-                </div>
-                <div class="title-container">
-                    <div class="title-runtime">
-                        <h4 class="proj-title">Frosty Silent Hour</h4>
-                        <p class="sub-desc font-color">1 hr. 2O23</p>
-                    </div>
-                    <a class="link tube-watch font-color" href="https://youtu.be/2FxIPGvL-Io" target=”_blank”>Watch on YOUTUBE</a>
-                    <br>
-                    <p class="font-color proj-desc">Pulsating thrusts of white and blues, noise and blob shapes slowly gravitate upwards, shifting size and place.
-                    <br>
-                    <br>   
-                    Created using TouchDesigner.</p>
-                </div>
-            </section>
-
-            <div class="dashed-line"></div>
-
-            <!-- Freelance -->
-            <h2 class="section-heading font-color">FREELANCE WORK</h2>
-
-            <!-- Project 1 -->
-            <section class="projects">
-                <div class="video-img">
-                    <img class="proj-img" src="./assets/images/pyramid-thieves.jpeg" alt="">
-                </div>
-                <div class="title-container">
-                    <div class="title-runtime">
-                        <h4 class="proj-title">Thunder by Pyramid Thieves</h4>
-                        <p class="sub-desc font-color">5 min. 2O19</p>
-                    </div>
-                    <a class="link tube-watch font-color" href="https://youtu.be/Xj0EtyL7fVw" target=”_blank”>Watch on YOUTUBE</a>
-                    <br>
-                    <p class="font-color proj-desc">Music video for the song Thunder by Boston-based band Pyramid Thieves. Served as visual effects artist, editor, and director for the project.
-                    </p>
-                </div>
-            </section>
             
-            <div class="dashed-line"></div>
-
-            <!-- Freelance -->
-            <h2 class="section-heading font-color">TOUCHDESIGNER CREATIONS</h2>
-
-            <!-- Project 1 -->
-            <section id="td-collection">
-                <div class="td-projects">
-                    <img class="td-img" src="./assets/images/project-gifs/black-river.gif" alt="">
-                    <h3 class="font-color">dark river</h3>
-                </div>
-                <div class="td-projects">
-                    <img class="td-img" src="./assets/images/project-gifs/bloom.gif" alt="">
-                    <h3 class="font-color">bloom feedback</h3>
-                </div>
-                <div class="td-projects">
-                    <img class="td-img" src="./assets/images/project-gifs/clementines.gif" alt="">
-                    <h3 class="font-color">clementines</h3>
-                </div>
-                <div class="td-projects">
-                    <img class="td-img" src="./assets/images/project-gifs/liquor-n-vinyl.gif" alt="">
-                    <h3 class="font-color">vnyl</h3>
-                </div>
-            </section>
-        </div> 
     </section>
 </body>
 </html>
