--- a/silent-vizs.html
+++ b/silent-vizs.html
@@ -83,7 +83,7 @@
             <!-- Silent Hour Projects Block -->
             <section>
                 <h2 class="section-heading font-color">SILENT MAGIC HOUR SERIES</h2>
-                <h3 class="section-desc font-color">BYOM (bring your own music) eye candy party accessory</h3>
+                <h3 class="about-desc font-color">BYOM (bring your own music) eye candy party accessory</h3>
             </section>
 
             <!-- Project 1 -->
