--- a/images.html
+++ b/images.html
@@ -74,6 +74,9 @@
 
 <!-- Page Body -->
    <section id="image-content">
+        <!-- Mobile dash -->
+        <div class="content-dashed-line mobile-only"></div>
+        
         <!-- <img src="/assets/images/scanned-img/me-1.jpeg" alt=""> -->
         <img src="./assets/images/scanned-img/flower-1.jpg" alt="distorted pink flowers">
         <img src="/assets/images/scanned-img/plant.jpeg" alt="">
