--- a/about.html
+++ b/about.html
@@ -85,6 +85,8 @@
                 <h2 class="section-heading font-color">ABOUT FREDO</h2>
                 <p class="about-desc font-color">Wilfredo hails from the vibrant island of Puerto Rico. Currently based out of New York City, his focus is in digital/analog video manipulation, generative art, and web development.</p>
 
+                <p class="about-desc font-color">You can find his CV <a class="font-color about-desc" href="assets/resume/fredo-resume-v101823.pdf" target="_blank">here</a>.</p>
+
                 <section id="">
                     <img class="img-width" src="/assets/images/scanned-img/me-1.jpeg" alt="">
                 </section>
