--- a/freelance.html
+++ b/freelance.html
@@ -99,6 +99,23 @@
                     </p>
                 </div>
             </section>
+
+            <!-- Project 2 -->
+            <section class="projects">
+                <div class="video-img">
+                    <img class="proj-img" src="./assets/images/dynamite-a.png" alt="">
+                </div>
+                <div class="title-container">
+                    <div class="title-runtime">
+                        <h4 class="proj-title">DYNAMITE ABRAHAM</h4>
+                        <p class="sub-desc font-color">8 min. 2O15</p>
+                    </div>
+                    <a class="link tube-watch font-color" href="https://youtu.be/VAabx5ttHa4" target=”_blank”>Watch on YOUTUBE</a>
+                    <br>
+                    <p class="font-color proj-desc">A short documentary about Dynamite Abraham, an experimental lo-fi supergroup from the mid 2010's. Served as the cinematographer. Shot on super 8 film.
+                    </p>
+                </div>
+            </section>
             
             <div class="dashed-line"></div>
 
