--- a/freelance.html
+++ b/freelance.html
@@ -93,9 +93,11 @@
                         <h4 class="proj-title">Thunder by Pyramid Thieves</h4>
                         <p class="sub-desc font-color">5 min. 2O19</p>
                     </div>
-                    <a class="link tube-watch font-color" href="https://youtu.be/Xj0EtyL7fVw" target=”_blank”>Watch on YOUTUBE</a>
+                    <a class="link tube-watch font-color" href="https://youtu.be/Xj0EtyL7fVw" target=”_blank” rel="noopener noreferrer">Watch on YOUTUBE</a>
                     <br>
-                    <p class="font-color proj-desc">Music video for the song Thunder by Boston-based band Pyramid Thieves. Served as visual effects artist, editor, and director for the project.
+                    <p class="font-color proj-desc">Music video for the song Thunder by Boston-based band Pyramid Thieves.
+                        <br>
+                    Role(s): Visual effects artist, Editor, and Director
                     </p>
                 </div>
             </section>
@@ -110,9 +112,11 @@
                         <h4 class="proj-title">DYNAMITE ABRAHAM</h4>
                         <p class="sub-desc font-color">8 min. 2O15</p>
                     </div>
-                    <a class="link tube-watch font-color" href="https://youtu.be/VAabx5ttHa4" target=”_blank”>Watch on YOUTUBE</a>
+                    <a class="link tube-watch font-color" href="https://youtu.be/VAabx5ttHa4" target=”_blank” rel="noopener noreferrer">Watch on YOUTUBE</a>
                     <br>
-                    <p class="font-color proj-desc">A short documentary about Dynamite Abraham, an experimental lo-fi supergroup from the mid 2010's. Served as the cinematographer. Shot on super 8 film.
+                    <p class="font-color proj-desc">A short documentary about Dynamite Abraham, an experimental lo-fi supergroup from the mid 2010's. Shot on super 8 film.
+                        <br>
+                    Role(s): Cinematographer
                     </p>
                 </div>
             </section>
