--- a/silent-vizs.html
+++ b/silent-vizs.html
@@ -96,7 +96,7 @@
                         <h4 class="proj-title">Wavy Silent Hour</h4>
                         <p class="sub-desc font-color">1 hr. 2O23</p>
                     </div>
-                    <a class="link tube-watch font-color" href="https://youtu.be/2FxIPGvL-Io" target=”_blank”>Watch on YOUTUBE</a>
+                    <a class="link tube-watch font-color" href="https://youtu.be/2FxIPGvL-Io" target=”_blank” rel="noopener noreferrer">Watch on YOUTUBE</a>
                     <br>
                     <p class="font-color proj-desc">Dreamy geometry radiates warm tones as ocean waves texture the spinning squares.
                     <br>
@@ -116,7 +116,7 @@
                         <h4 class="proj-title">Frosty Silent Hour</h4>
                         <p class="sub-desc font-color">1 hr. 2O23</p>
                     </div>
-                    <a class="link tube-watch font-color" href="https://youtu.be/2FxIPGvL-Io" target=”_blank”>Watch on YOUTUBE</a>
+                    <a class="link tube-watch font-color" href="https://youtu.be/2FxIPGvL-Io" target=”_blank” rel="noopener noreferrer">Watch on YOUTUBE</a>
                     <br>
                     <p class="font-color proj-desc">Pulsating thrusts of white and blues, noise and blob shapes slowly gravitate upwards, shifting size and place.
                     <br>
