--- a/video-work.html
+++ b/video-work.html
@@ -95,7 +95,7 @@
                         <h4 class="proj-title">Space-Men</h4>
                         <p class="sub-desc font-color">5 min. 2O23</p>
                     </div>
-                    <a class="link tube-watch font-color" href="https://youtu.be/Xj0EtyL7fVw" target=”_blank”>Watch on YOUTUBE</a>
+                    <a class="link tube-watch font-color" href="https://youtu.be/Xj0EtyL7fVw" target=”_blank” rel="noopener noreferrer">Watch on YOUTUBE</a>
                     <div class="featured-track">
                         <img class="music-icon" src="/assets/images/icons/music.png" alt="">
                         <p class="font-color track-p">
@@ -121,7 +121,7 @@
                         <h4 class="proj-title">El Santo</h4>
                         <p class="sub-desc font-color">5 min. 2O23</p>
                     </div>
-                    <a class="link tube-watch font-color" href="https://youtu.be/Xj0EtyL7fVw" target=”_blank”>Watch on YOUTUBE</a>
+                    <a class="link tube-watch font-color" href="https://youtu.be/Xj0EtyL7fVw" target=”_blank” rel="noopener noreferrer">Watch on YOUTUBE</a>
                     <div class="featured-track">
                         <img class="music-icon" src="/assets/images/icons/music.png" alt="">
                         <p class="font-color track-p">
@@ -154,7 +154,7 @@
                         <h4 class="proj-title">Wavy Silent Hour</h4>
                         <p class="sub-desc font-color">1 hr. 2O23</p>
                     </div>
-                    <a class="link tube-watch font-color" href="https://youtu.be/2FxIPGvL-Io" target=”_blank”>Watch on YOUTUBE</a>
+                    <a class="link tube-watch font-color" href="https://youtu.be/2FxIPGvL-Io" target=”_blank” rel="noopener noreferrer">Watch on YOUTUBE</a>
                     <br>
                     <p class="font-color proj-desc">Dreamy geometry radiates warm tones as ocean waves texture the spinning squares.
                     <br>
@@ -174,7 +174,7 @@
                         <h4 class="proj-title">Frosty Silent Hour</h4>
                         <p class="sub-desc font-color">1 hr. 2O23</p>
                     </div>
-                    <a class="link tube-watch font-color" href="https://youtu.be/2FxIPGvL-Io" target=”_blank”>Watch on YOUTUBE</a>
+                    <a class="link tube-watch font-color" href="https://youtu.be/2FxIPGvL-Io" target=”_blank” rel="noopener noreferrer">Watch on YOUTUBE</a>
                     <br>
                     <p class="font-color proj-desc">Pulsating thrusts of white and blues, noise and blob shapes slowly gravitate upwards, shifting size and place.
                     <br>
@@ -198,7 +198,7 @@
                         <h4 class="proj-title">Thunder by Pyramid Thieves</h4>
                         <p class="sub-desc font-color">5 min. 2O19</p>
                     </div>
-                    <a class="link tube-watch font-color" href="https://youtu.be/Xj0EtyL7fVw" target=”_blank”>Watch on YOUTUBE</a>
+                    <a class="link tube-watch font-color" href="https://youtu.be/Xj0EtyL7fVw" target=”_blank” rel="noopener noreferrer">Watch on YOUTUBE</a>
                     <br>
                     <p class="font-color proj-desc">Music video for the song Thunder by Boston-based band Pyramid Thieves. Served as visual effects artist, editor, and director for the project.
                     </p>
