--- a/vizs-music-pair.html
+++ b/vizs-music-pair.html
@@ -95,7 +95,7 @@
                         <h4 class="proj-title">Space-Men</h4>
                         <p class="sub-desc font-color">5 min. 2O23</p>
                     </div>
-                    <a class="link tube-watch font-color" href="https://youtu.be/Xj0EtyL7fVw" target=”_blank”>Watch on YOUTUBE</a>
+                    <a class="link tube-watch font-color" href="https://youtu.be/Xj0EtyL7fVw" target=”_blank” rel="noopener noreferrer">Watch on YOUTUBE</a>
                     <div class="featured-track">
                         <img class="music-icon" src="/assets/images/icons/music.png" alt="">
                         <p class="font-color track-p">
@@ -121,7 +121,7 @@
                         <h4 class="proj-title">El Santo</h4>
                         <p class="sub-desc font-color">5 min. 2O23</p>
                     </div>
-                    <a class="link tube-watch font-color" href="https://youtu.be/Xj0EtyL7fVw" target=”_blank”>Watch on YOUTUBE</a>
+                    <a class="link tube-watch font-color" href="https://youtu.be/Xj0EtyL7fVw" target=”_blank” rel="noopener noreferrer">Watch on YOUTUBE</a>
                     <div class="featured-track">
                         <img class="music-icon" src="/assets/images/icons/music.png" alt="">
                         <p class="font-color track-p">
