--- a/touchdesign.html
+++ b/touchdesign.html
@@ -51,7 +51,7 @@
             </section>
             <section class="menu-options">
                 <a class="font-color" id="menu-option" href="/freelance.html"><label for=""></label>freelance work</label></a>
-                <a class="font-color active" id="menu-option" href="/touchdesign.html"><label for=""></label>touchdesigner creations</label></a>
+                <a class="font-color active" id="menu-option" href="/touchdesign.html"><label for=""></label>miscellaneous creations</label></a>
                 <a class="font-color" id="menu-option" href="/images.html"><label for=""></label>images</label></a>
             </section>
         </div>
@@ -81,7 +81,7 @@
         <div id="video-collection">
 
             <!-- Touchdesign -->
-            <h2 class="section-heading font-color">TOUCHDESIGNER CREATIONS</h2>
+            <h2 class="section-heading font-color">MISCELLANEOUS CREATIONS</h2>
 
             <!-- Project 1 -->
             <section id="td-collection">
