--- a/vizs-music-pair.html
+++ b/vizs-music-pair.html
@@ -51,7 +51,7 @@
             </section>
             <section class="menu-options">
                 <a class="font-color" id="menu-option" href="/freelance.html"><label for=""></label>freelance work</label></a>
-                <a class="font-color" id="menu-option" href="/touchdesign.html"><label for=""></label>touchdesigner creations</label></a>
+                <a class="font-color" id="menu-option" href="/touchdesign.html"><label for=""></label>miscellaneous creations</label></a>
                 <a class="font-color" id="menu-option" href="/images.html"><label for=""></label>images</label></a>
             </section>
         </div>
