--- a/visualizers.html
+++ b/visualizers.html
@@ -188,7 +188,7 @@
         <br />
         <hr>
 
-        <section style="margin: 70px 0 0 0;">
+        <!-- <section style="margin: 70px 0 0 0;">
             <h2 id="other" class="font-color sub-title">¬OTHER VIZS¬</h2>
         </section>
 
@@ -205,7 +205,7 @@
             <section class="td-projects">
                 <img class="td-img" src="./assets/images/project-gifs/liquor-n-vinyl.gif" alt="" />
             </section>
-        </section>
+        </section> -->
 
         <br />
     </main>
