--- a/visualizers.html
+++ b/visualizers.html
@@ -188,24 +188,24 @@
         <br />
         <hr>
 
-        <!-- <section style="margin: 70px 0 0 0;">
+        <section style="margin: 70px 0 0 0;">
             <h2 id="other" class="font-color sub-title">¬OTHER VIZS¬</h2>
         </section>
 
         <section id="td-collection">
             <section class="td-projects">
-                <img class="td-img" src="./assets/images/project-gifs/black-river.gif" alt="" />
+                <img class="td-img" src="./assets/images/project-gifs/black-river.gif" alt="" loading="lazy" />
             </section>
             <section class="td-projects">
-                <img class="td-img" src="./assets/images/project-gifs/bloom.gif" alt="" />
+                <img class="td-img" src="./assets/images/project-gifs/bloom.gif" alt="" loading="lazy" />
             </section>
             <section class="td-projects">
-                <img class="td-img" src="./assets/images/project-gifs/clementines.gif" alt="" />
+                <img class="td-img" src="./assets/images/project-gifs/clementines.gif" alt="" loading="lazy" />
             </section>
             <section class="td-projects">
-                <img class="td-img" src="./assets/images/project-gifs/liquor-n-vinyl.gif" alt="" />
+                <img class="td-img" src="./assets/images/project-gifs/liquor-n-vinyl.gif" alt="" loading="lazy" />
             </section>
-        </section> -->
+        </section>
 
         <br />
     </main>
