--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
     <hr>
 
     <main class="main-content">
-        <br><br><br><br><br><br><br><br><br><br>
+        <br><br class="space"><br class="space"><br class="space"><br class="space"><br class="space"><br class="space"><br class="space"><br class="space"><br class="space">
         <section class="title-page">
             <p class="font-color">
                 Wilfredo hails from the vibrant island of Puerto Rico. His background is in film production, having studied at The University of Rhode Island concentrating in editing and cinematography. He also dabbles in front-end web building.
