--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <hr>
 
     <main class="landing-main">
-        <br><br><br><br><br><br><br><br><br><br>
+        <br><br class="space"><br class="space"><br class="space"><br class="space"><br class="space"><br class="space"><br class="space"><br class="space"><br class="space">
 
         <!-- <section class="landing-proj">
             <img class="proj-gif" src="assets/videos/landing-video.mp4" alt="">
