--- a/visualizers.html
+++ b/visualizers.html
@@ -46,7 +46,7 @@
     </header>
 
     <main class="main-content">
-        <br><br><br><br><br><br><br><br><br><br>
+        <br><br class="space"><br class="space"><br class="space"><br class="space"><br class="space"><br class="space"><br class="space"><br class="space"><br class="space">
         <section class="title-page">
             <p class="font-color">
                 Digital repository of works created using a mix of analog and digital
@@ -208,6 +208,7 @@
         </section>
 
         <br />
+
     </main>
 
     <!-- Game -->
