--- a/visualizers.html
+++ b/visualizers.html
@@ -131,7 +131,7 @@
 
         <section style="margin: 70px 0 0 0;">
             <h2 class="font-color sub-title">
-                •<abbr title="Bring Your Own Playlist">BYO</abbr>P MAGIC HOUR SERIES•
+                •BYOP MAGIC HOUR SERIES•
             </h2>
             <p class="font-color desc">
                 Bring your own playlist eye candy party accessory
