--- a/visualizers.html
+++ b/visualizers.html
@@ -130,9 +130,7 @@
         <br id="magic-hour" />
 
         <section style="margin: 70px 0 0 0;">
-            <h2 class="font-color sub-title">
-                •BYOP MAGIC HOUR SERIES•
-            </h2>
+            <h2 class="font-color sub-title">•BYOP MAGIC HOUR SERIES•</h2>
             <p class="font-color desc">
                 Bring your own playlist eye candy party accessory
             </p>
