--- a/visualizers.html
+++ b/visualizers.html
@@ -129,7 +129,7 @@
 
         <br id="magic-hour" />
 
-        <section style="margin: 70px 0 0 0; display: flex; justify-content: center; align-items: center;">
+        <section style="margin: 70px 0 0 0; display: flex; flex-direction: column; justify-content: center; align-items: center;">
             <h2 class="font-color sub-title">•BYOP MAGIC HOUR SERIES•</h2>
             <p class="font-color desc">
                 Bring your own playlist eye candy party accessory
