--- a/visualizers.html
+++ b/visualizers.html
@@ -130,9 +130,9 @@
         <br id="magic-hour" />
 
         <section style="margin: 70px 0 0 0; display: flex; flex-direction: column; justify-content: center; align-items: center;">
-            <h2 class="font-color sub-title">•BYOP MAGIC <br> HOUR SERIES•</h2>
+            <h2 class="font-color sub-title">•BYOP MAGIC <br class="disp"> HOUR SERIES•</h2>
             <p class="font-color desc">
-                Bring your own playlist <br> eye candy party accessory
+                Bring your own playlist <br class="disp"> eye candy party accessory
             </p>
         </section>
 
