--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
             <section class="full-menu">
                 <ul class="menu-landing">
-                    <li><a class="type-style-two" id="menu-item" href="index3.html">home</a></li>
+                    <li><a class="type-style-two" id="menu-item" href="index.html">home</a></li>
                     <li><a class="type-style-two" id="menu-item" href="about.html">about me</a></li>
                     <li><a class="type-style-two" id="menu-item" href="production.html">production work</a></li>
                     <li><a class="type-style-two" id="menu-item" href="visualizers.html">visual creations</a></li>
