--- a/index3.html
+++ b/index3.html
@@ -12,12 +12,14 @@
     <link rel="stylesheet" href="/styles/style3.css">
 </head>
 
-<body class="landing-video">
+<body>
+
+    <div class="landing-video">
+    </div>
 
     <main class="landing-main">
 
         <section class="bit-box-logo">
-
             <section class="eight-bit-shadow-logo">
                 <div class="wrapper-shadow-logo">
                 </div>
