--- a/about.html
+++ b/about.html
@@ -1,85 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Wilfredo Herrera">
+    <meta name="description" content="This page is the portfolio of Wilfredo Herrera">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FREDO WWORLDD</title>
+    <title>fr-world</title>
     <link type="image/x-icon" sizes="16x16" rel="icon" href="assets/images/space-favicon.png">
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&family=Rubik+Mono+One&family=VT323&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/styles/styles.css">
 </head>
-
 <body>
-
-    <header>
-        <nav id="nav-section">
-
-            <!-- Logo section -->
-            <section id="name-subtitle">
-                <section class="logo-section">
-                    <a class="name font-color" href="index.html">WWWilfredooo HHHerreraaa</a>
-                    <p class="logo-subtitle font-color"> visuals maker</p>
-                </section>
-
-            
-            </section>
-
-            <!-- Menu -->
-            <section class="menu-options">
-                <a class="font-color active" id="menu-option" href="about.html">about me</a>
-                <a class="font-color" id="menu-option" href="production.html">production work</a>
-                <a class="font-color" id="menu-option" href="visualizers.html">visual creations</a>
-            </section>
-
-            <!-- Social menu -->
-            <section id="social-menu">
-                <a class="font-color" href="https://www.instagram.com/bebofrik/" target=”_blank”>instagram</a>
-                <a class="font-color" href="https://www.youtube.com/channel/UC5oNJt-0mgmcMfv42GhqxZA" target=”_blank”>youtube</a>
-                <a class="font-color" href="https://letterboxd.com/spookyfr/" target=”_blank”>letterboxd</a>
-            </section>
-
-            <section class="radio-link">
-                <a href="https://www.mixcloud.com/fr_radio/" target=”_blank”><img class="radio-icon" src="/assets/images/icons/radio-icon.png" alt="radio icon"></a>
-            </section>
-        </nav>
-        <hr>
-    </header>
-
-    <hr>
-
-    <main class="main-content">
-        <br><br class="space"><br class="space"><br class="space"><br class="space"><br class="space"><br class="space"><br class="space"><br class="space"><br class="space">
-        <section class="title-page">
-            <p class="font-color">
-                Wilfredo hails from the vibrant island of Puerto Rico. His background is in film production, having studied at The University of Rhode Island concentrating in editing and cinematography. He also dabbles in front-end web building.
-                <br>
-                <br>
-                Currently based out of New York City, his current focus is in digital/analog video manipulation, generative art, and web development.
-                <br>
-                <br>
-                You can find his CV <a class="font-color" href="assets/resume/fredo-resume-v101823.pdf" target="_blank">here</a>.
-            </p>
+    <section id="basegrid">
+        <section class="background-img-me">
         </section>
 
-        <!-- About -->
-        <section>
-            <img class="img-width" src="/assets/images/scanned-img/me-1.jpeg" alt="">
-         </section>
+        <section class="titlebanner" style="margin: 0 auto;">
+            <h1 class="title" style="font-size: 30px; line-height: 33px;">
+                <a href="index.html" target="_self" class="bold link">fr-world</a>: about wilfredo herrera
+            </h1>
+        </section>
+        <section class="item contact">
+            <h2 class="subtitle" style="font-size: 15.960796px; line-height: 18.198438px;">
+                contact: <a href="mailto:fredo25w@gmail.com" target="_blank" class="link">email</a>, <a href="https://www.instagram.com/bebofrik/" target="_blank" class="link">instagram</a>, <a href="https://www.youtube.com/channel/UC5oNJt-0mgmcMfv42GhqxZA" target="_blank" class="link">youtube</a>, <a href="https://letterboxd.com/spookyfr/" target="_blank" class="link">letterboxd</a>
+            </h2>
+        </section>
+        <!-- <section class="item" style="margin: 0 auto; top: 170px;">
+            <h1 class="title" style="font-size: 31.921593px; line-height: 36.396875px;">
+                visualizrs
+            </h1>
+        </section> -->
 
+        <section class="about-pgraph">
 
-    <br>
+            <section class="about">
+                <p style="font-family: 'DM Mono', monospace; font-weight: 400; word-wrap: break-word;">
+                    Wilfredo hails from the vibrant island of Puerto Rico. He traveled to Rhode Island for university and discovered the joys of filmmaking. Fredo has worked as gaffer, producer, editor, cinematographer, and director on various <a href="https://youtu.be/VAabx5ttHa4" target=”_blank” rel="noopener noreferrer">projects</a> including a <a href="https://youtu.be/wNJihWmU-iE" target=”_blank” rel="noopener noreferrer">music video for the Boston band Pyramid Thieves</a>. He also dabbles in front-end web building (he coded this website!).
 
+                    <br>
+                    <br>
 
-    </main>
+                    Currently based out of New York City, his current focus is in digital/analog video manipulation, generative art, and web development. He welcomes any artistic collaboration.</p>
+            </section>
+            
 
-        <!-- Game -->
-        <!-- <div class="game-button">
-            <button class="font-color" onclick="beginGame()" type="button"> Play a game </button>
-        </div> -->
-
-    <script src="./scripts/script.js"></script>
+            <footer class="foot">
+                <p style="font-family: 'DM Mono', monospace; font-size: 10px; color: black; background-color: white; padding: 10px; width: 200px; position: relative; top: 300px;" >© 1991 Puerto Rico 
+                    <img src="assets/images/noun-dinosaurs-1439060.png" style="width: 20px; height: 15px; margin: 0; padding: 0; object-fit: cover; position: absolute; left: 130px; top: 11px;" alt="">
+                </p>
+            </footer>
+        </section>
+    </section>
 </body>
-
 </html>
