--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <section class="title-container" style="font-family: 'DM Mono', monospace;">
                     <section class="title-runtime">
                         <h4 class="proj-title ">
-                            <a href="" target="_blank" class="link">Bloom</a>
+                            Bloom
                         </h4>
                         <p class="sub-desc "></p>
                     </section>
@@ -140,7 +140,7 @@
                 <section class="title-container" style="font-family: 'DM Mono', monospace;">
                     <section class="title-runtime">
                         <h4 class="proj-title ">
-                            <a href="" target="_blank" class="link">blck river</a>
+                            blck river
                         </h4>
                         <p class="sub-desc "></p>
                     </section>
@@ -159,7 +159,7 @@
                 <section class="title-container" style="font-family: 'DM Mono', monospace;">
                     <section class="title-runtime">
                         <h4 class="proj-title ">
-                            <a href="" target="_blank" class="link">clementines</a>
+                            clementines
                         </h4>
                         <p class="sub-desc "></p>
                     </section>
@@ -177,7 +177,7 @@
                 <section class="title-container" style="font-family: 'DM Mono', monospace;">
                     <section class="title-runtime">
                         <h4 class="proj-title ">
-                            <a href="" target="_blank" class="link">gaming</a>
+                            gaming
                         </h4>
                         <p class="sub-desc "></p>
                     </section>
