--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <section class="projs-flow">
             <section class="projects-left">
                 <section>
-                    <img class="proj-img" src="/assets/images/project-gifs/space-men.gif" alt="" />
+                    <img class="proj-img" src="/assets/images/project-gifs/space-men.gif" alt="" loading="lazy" />
                 </section>
     
                 <section class="title-container" style="font-family: 'DM Mono', monospace;">
@@ -57,7 +57,7 @@
 
             <section class="projects-right">
                 <section>
-                    <img class="proj-img" src="assets/images/project-gifs/el-santo.gif" alt="" />
+                    <img class="proj-img" src="assets/images/project-gifs/el-santo.gif" alt="" loading="lazy" />
                 </section>
     
                 <section class="title-container" style="font-family: 'DM Mono', monospace;">
