--- a/index.html
+++ b/index.html
@@ -189,9 +189,7 @@
             </section>
 
             <footer>
-                <p style="font-family: 'DM Mono', monospace; font-size: 10px; color: black; background-color: white; padding: 10px; width: 200px;">© 1991 Puerto Rico
-                    <img src="assets/images/noun-dinosaurs-1439060.png" style="width: 20px; height: 15px; margin: 0; padding: 0; object-fit: cover; position: absolute; left: 130px; top: 11px;" alt="">
-                </p>
+                <p style="font-family: 'DM Mono', monospace; font-size: 10px; color: black; background-color: white; padding: 10px; width: 200px;">© 1991 Puerto Rico</p>
             </footer>
         </section>
     </section>
