--- a/about.html
+++ b/about.html
@@ -23,11 +23,11 @@
                 <a href="index.html" target="_self" class="bold link">fr-world</a>: about wilfredo herrera
             </h1>
         </section>
-        <section class="item contact">
+        <!-- <section class="item contact">
             <h2 class="subtitle" style="font-size: 15.960796px; line-height: 18.198438px;">
                 contact: <a href="mailto:fredo25w@gmail.com" target="_blank" class="link">email</a>, <a href="https://www.instagram.com/bebofrik/" target="_blank" class="link">instagram</a>, <a href="https://www.youtube.com/channel/UC5oNJt-0mgmcMfv42GhqxZA" target="_blank" class="link">youtube</a>, <a href="https://letterboxd.com/spookyfr/" target="_blank" class="link">letterboxd</a>
             </h2>
-        </section>
+        </section> -->
         <!-- <section class="item" style="margin: 0 auto; top: 170px;">
             <h1 class="title" style="font-size: 31.921593px; line-height: 36.396875px;">
                 visualizrs
